Fix alignment of pig image after rebase

--- a/app/assets/stylesheets/components/_home_feature.scss
+++ b/app/assets/stylesheets/components/_home_feature.scss
@@ -8,7 +8,7 @@
   background: transparent image_url('pig_and_friends.png') 10px 125px no-repeat;
 
   @include respond-to($mq-m) {
-    background-position: 15px 26px;
+    background-position: 15px 15px;
   }
 
   @include respond-to($mq-l) {
